tests/examples/good/misc/good018.lat
int main() {
    int[] arr = new int[10];
    
    printInt(arr.length);
    printInt(arr[0]);
    printInt(arr[1]);
    printInt(arr[2]);
    printInt(arr[4]);
    printInt(arr[9]);
    arr[0] = 1;
    arr[4] = 4;
    printInt(arr[0]);
    printInt(arr[4]);
    
    return 0;
}
