tests/examples/bad/bad012.lat
int main() {
    int[] arr = new int[10];
    arr.length = 5;
    return 0;
}
 